--- a/Client/config/config.json
+++ b/Client/config/config.json
@@ -4,5 +4,6 @@
 	"backups_base_dir": "",
     "ignored_services": [""],
     "host": "0.0.0.0",
-    "port": "5000"
+    "port": "5000",
+    "token": ""
 }
