--- a/Server/config/config.json
+++ b/Server/config/config.json
@@ -1,5 +1,6 @@
 {
-	"base_dir_backups": "",
+	"base_dir_backups":[""],
     "host": "0.0.0.0",
-    "port": "5000"
+    "port": "5000",
+    "token": ""
 }
